<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    tools:context=".Posts.Post">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/create_post"
                android:id="@+id/textView"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal" />


            <LinearLayout
                android:layout_marginBottom="20dp"
                android:background="#BDBABA"
                android:layout_width="match_parent"
                android:layout_height="2dp">

            </LinearLayout>

            <AutoCompleteTextView
                android:id="@+id/bloodGroupEtId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/blood_group"
                android:completionThreshold="1"
                />




            <EditText
                android:id="@+id/hospitalNameEtId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hospital_name_area_with_location"
                android:inputType="textPersonName"
                />

            <AutoCompleteTextView
                android:id="@+id/zillaEtId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/zilla"
                android:completionThreshold="1"
                />


            <EditText
                android:id="@+id/phoneNumberEtId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                />



            <EditText
                android:id="@+id/dateTimeEtId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/date_and_time"
                android:inputType="textMultiLine" />


            <EditText
                android:id="@+id/detailsEtId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:singleLine="true"
                android:minHeight="80dp"
                android:gravity="start"
                android:inputType="textCapSentences|textMultiLine"
                android:hint="@string/details_purpose_and_number_of_bags"
                />


            <Button
                android:id="@+id/postBtnId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20sp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textAllCaps="false"
                android:text="@string/post" />


            <ProgressBar
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressbarId"
                android:layout_gravity="center"/>

        </LinearLayout>


    </ScrollView>




</LinearLayout>