<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:layout_marginBottom="1dp"
    android:padding="5dp">


    <LinearLayout
        android:padding="3dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/emergency_blood_needed"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/currentTimeCardTvId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_00_00"
                android:paddingEnd="2dp"
                android:layout_marginStart="5dp"
                android:textSize="12sp"
                android:gravity="end"

                />

        </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/blood_group"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bloodGroupCardTvId"
                android:text=""
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="15sp"
                />

        </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/hospital_name"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="15sp"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hospitalNameCardTvId"
                android:text=""
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="15sp"
                />

        </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/zillaCardTvId"
                android:text=""
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="15sp"
                />

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/contact"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phoneNumberCardTvId"
                android:text=""
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="15sp"
                />

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/time_and_date"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dateTimeCardTvId"
                android:text=""
                android:hint="@string/e_g_3_00_pm_4_april_2020"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="15sp"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black"
                android:text="@string/details"
                android:textStyle="normal"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detailsCardTvId"
                android:text=""
                android:textColor="@color/black"
                android:textStyle="normal"
                android:textSize="15sp"
                />

        </LinearLayout>


    </LinearLayout>



</androidx.cardview.widget.CardView>