<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".AboutUs">

    <LinearLayout
        android:background="@android:drawable/dialog_holo_light_frame"
        android:padding="15dp"
        android:outlineAmbientShadowColor="#9F9898"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/designer_text"
            android:textSize="17sp"
            android:textColor="#000000"
            />

        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developer_name"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textStyle="bold"
            />

        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/study_text"
            android:textSize="17sp"
            android:textColor="#000000"
            />

        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copy_rights"
            android:textSize="17sp"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_marginTop="1dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:padding="15dp"
        android:outlineAmbientShadowColor="#9F9898"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook_page"
            android:textSize="17sp"
            android:textColor="#000000"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook"
                android:id="@+id/fbPageBtnId"
                />

        </LinearLayout>



    </LinearLayout>




    <LinearLayout
        android:layout_marginTop="1dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:padding="15dp"
        android:outlineAmbientShadowColor="#9F9898"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_developer"
            android:textSize="17sp"
            android:textColor="#000000"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook"
                android:id="@+id/facebookLinkBtnId"
                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/email"
                android:id="@+id/emailImageBtnId"
                />
        </LinearLayout>



    </LinearLayout>

</LinearLayout>