<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    tools:context=".SignUpLogIn.SignUp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Create Profile"
                android:id="@+id/textView"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_marginBottom="20dp"
                android:background="#BDBDBD"
                android:layout_width="match_parent"
                android:layout_height="2dp">

            </LinearLayout>


            <EditText
                android:id="@+id/updateNameEtId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Name"
                android:inputType="textPersonName"
                />

            <AutoCompleteTextView
                android:id="@+id/updateBloodGroupEtId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Blood Group"
                android:completionThreshold="1"
                />


            <LinearLayout
                android:weightSum="4"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/lastDDEtId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/last_donation_date_d_m_y"
                    android:inputType="textPersonName"
                    />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/idontKnowTvId"
                        android:background="@android:drawable/dialog_holo_light_frame"
                        android:layout_marginBottom="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/i_don_t_know"
                        android:padding="10dp"
                        android:textSize="15sp"
                        android:textColor="#000000"
                        />


                    <TextView
                        android:padding="10dp"
                        android:id="@+id/more4MonthTvId"
                        android:background="@android:drawable/dialog_holo_light_frame"
                        android:textAlignment="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_than_4_months"
                        android:textSize="15sp"
                        android:textColor="#000000"
                        />

                </LinearLayout>

            </LinearLayout>



            <EditText
                android:id="@+id/updateVillageEtId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/area_village"
                />


            <EditText
                android:id="@+id/updateUpazilaEtId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/upazila_university"
                />

            <AutoCompleteTextView
                android:id="@+id/updateZillaEtId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Zilla"
                android:completionThreshold="1"
                />



            <EditText
                android:id="@+id/updateEmailEtId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/email_optional"
                android:inputType="textEmailAddress"
                />


            <EditText
                android:id="@+id/updateStatusEtId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/status"
                android:inputType="textMultiLine"
                />



            <Button
                android:id="@+id/updateProfileBtnId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:background="@drawable/round_bg"
                android:textAllCaps="false"
                android:text="Save" />


            <ProgressBar
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/updateProgressbarId"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>